padding issue
text was cut off on iPhone 5 size. Removing this padding was the
solution, which I had done incorrectly before.

--- a/includes/style.css
+++ b/includes/style.css
@@ -203,7 +203,8 @@ ul.sub-list {
 	}
 	.az-search{
 	width: 100%;
-	padding: none;
+	padding-left: 0px;
+	padding-right: 0px;
 	}
 	.az-search input {
 	width: 100%;
